working java code compiler